# dupekill

./: .gitmodules  CMakeLists.txt  FileHash.cpp  FileHash.h  README.md  main.cpp
include/: FileHash.h  def.h
src/: FileHash.cpp
